--- a/gb/21/4/2/n12855029.md
+++ b/gb/21/4/2/n12855029.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/harlek3030/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/harlek3030/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/harlek3030/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/harlek3030/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/harlek3030/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/harlek3030/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/harlek3030/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/harlek3030/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/harlek3030/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/harlek3030/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/harlek3030/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/harlek3030/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/harlek3030/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/harlek3030/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/harlek3030/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/harlek3030/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/harlek3030/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/harlek3030/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/harlek3030/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/harlek3030/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/harlek3030/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/harlek3030/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/harlek3030/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/harlek3030/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>精通西学的严复相信冥冥中有鬼神</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/05/GettyImages-948981556-600x400.jpg" />
 <h6>严复还相信冥冥中存在鬼神，尊重天道，相信命理，醉心风水八卦阴阳五行。示意图。(DANIEL REINHARDT/AFP/Getty Images)
 </h6>
 <hr>
-<p>在中国近代史上，先后执掌复旦公学和北京大学、被称为“精通西学第一人”并因传播西学而闻名于世，又头顶着翻译家、思想家、教育家头衔的<ahref="https://github.com/harlek3030/djy/blob/master/gb/tag/%E4%B8%A5%E5%A4%8D.md#1">严复</a>，在很多人眼中，俨然是一个“反对封建迷信”的形象。然而事实却并非如此。</p>
-<p>一方面，<ahref="https://github.com/harlek3030/djy/blob/master/gb/tag/%E4%B8%A5%E5%A4%8D.md#1">严复</a>提倡西学，主张变法，主张用“西学”改造“中学”，并通过翻译大量著作，系统地将西方社会学、政治学、政治经济学、哲学和自然科学介绍到中国。比如他翻译了英国赫胥黎的《天演论》，宣传所谓的“物竞天择，适者生存”的观点，而赫胥黎是提出进化论的达尔文的坚定追随者。该书的翻译影响巨大，而且影响的不是一代人。</p>
+<p>在中国近代史上，先后执掌复旦公学和北京大学、被称为“精通西学第一人”并因传播西学而闻名于世，又头顶着翻译家、思想家、教育家头衔的<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%A5%E5%A4%8D.md#1">严复</a>，在很多人眼中，俨然是一个“反对封建迷信”的形象。然而事实却并非如此。</p>
+<p>一方面，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B8%A5%E5%A4%8D.md#1">严复</a>提倡西学，主张变法，主张用“西学”改造“中学”，并通过翻译大量著作，系统地将西方社会学、政治学、政治经济学、哲学和自然科学介绍到中国。比如他翻译了英国赫胥黎的《天演论》，宣传所谓的“物竞天择，适者生存”的观点，而赫胥黎是提出进化论的达尔文的坚定追随者。该书的翻译影响巨大，而且影响的不是一代人。</p>
 <p>首先达尔文的进化论是谬论，其否定了神创论。按照其说辞和假设，人类是从低等到高等、从简单到复杂逐渐进化来的，而一个物种要进化演变，必定要有竞争，竞争的先决条件就是要有竞争的物种出现。然而现实世界中物种是固定、分明的，并没有逐渐进化的痕迹，比如猿就是猿、人就是人，并没有介于两者之间的“猿人”存在。达尔文认为“新种淘汰旧种”的自然选择可以通过过渡类型化石证明，但人们发现的化石证据不但没有证实进化论，相反都在推翻进化论理论。而以前那些所谓“进化论”的证据，现在都被世界科学家们揭露是假的，有很多是伪造的。换言之，进化论是根本站不住脚的。</p>
 <p>然而，信奉撒旦教的马克思在看到进化论后如获至宝。马克思说：“我们现在以进化论的概念来看宇宙，再也没有空间容纳一位统治者或者创造者了。”他随之又把“物竞天择，适者生存”搞成了“弱肉强食，优胜劣汰”加入阶级斗争论，将数千年文明解释成一部“阶级斗争史”，并宣称“共产主义”是人类文明“进化”的“最高阶段”。因而，带领人类走向“共产主义”的共产党自然就成了统治国家的“最合法”力量。从这个意义上说，严复的所为是有着相当大的负面影响的。</p>
 <p>不过，另一方面，深受传统文化熏陶的严复，骨子里还是一位传统的士大夫，他还相信冥冥中存在鬼神，尊重天道，相信命理，醉心风水八卦阴阳五行。他从小学习《易经》以及儒家经典，因此对《易经》颇有造诣。终其一生，尤其在动荡岁月中，他常常用《易经》占卜吉凶，占卜的事情包括国事、财富、疾病、官运、婚姻、流年等等。在他的日记中，记录了不少占卜的结果。</p>
@@ -35,46 +35,46 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/2/6/n12737786.md#1">【元曲大家】江南才子徐再思 写尽相思意</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/1/23/n12707767.md#1">【元曲大家】张可久半生为吏 终成词林宗匠</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/1/10/n12678787.md#1">大书画家董其昌资助穷算命先生</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/20/12/21/n12636114.md#1">【元曲大家】关汉卿的散曲本色</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/20/12/17/n12627056.md#1">少年李白 心静飞鸟亲 道高猛虎伏</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/20/12/9/n12606703.md#1">王羲之入木三分与范仲淹断齑划粥</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/20/10/28/n12508782.md#1">王羲之不好名利 与道士许迈结世外之交</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/20/9/15/n12405979.md#1">左思十年写就《三都赋》 一时洛阳纸贵</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/20/8/13/n12328842.md#1">咏诗词了却官司的传奇女子</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/10/22/n13322375.md#1">将巨额遗产让与姑母 阮孝绪避世向道</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/21/n13104808.md#1">欧阳修一生奇遇多 常怀疑自己本是世外之人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/16/n13093824.md#1">早慧神童“初唐四杰”为何有才名寡爵禄？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/26/n13049428.md#1">协助撰写《资治通鉴》 范祖禹前世为东汉开国名将</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/2/6/n12737786.md#1">【元曲大家】江南才子徐再思 写尽相思意</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/1/23/n12707767.md#1">【元曲大家】张可久半生为吏 终成词林宗匠</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/1/10/n12678787.md#1">大书画家董其昌资助穷算命先生</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/12/21/n12636114.md#1">【元曲大家】关汉卿的散曲本色</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/12/17/n12627056.md#1">少年李白 心静飞鸟亲 道高猛虎伏</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/5/n9926680.md#1" target="_blank">文武：鲁迅在中共破坏中国传统文化中的作用</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/2/27/n4375491.md#1" target="_blank">归宇斌: 江泽民导演天安门伪火的两个意图</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/10/n10965227.md#1" target="_blank">林启山：刘义元卖妻</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/20/n11268195.md#1" target="_blank">以色列母亲修大法学会聆听 亲子关系更融洽</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/4/n12857839.md#1">杨威：三星堆新发现 冲击进化论无神论</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/3/29/n12844310.md#1">金言：改写历史？三星堆掀文明起源争论</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/1/n12852292.md#1">【未解之谜】史前杰作？月亮七大谜团（下）</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/3/n12856808.md#1">【小宇宙传说】人体能量场的奥秘</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/6/n12861114.md#1">自称死过三次 女网红：人死后时间变得很慢</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/8/n12865650.md#1">【重播】欧洲议员：不吃中共制裁这一套</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/9/n12869621.md#1">【新闻大家谈】国际24专家：再查病毒起源</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/8/n12867867.md#1">【时事纵横】美再拉黑七中企 习北极圈撞墙</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/7/n12864525.md#1">中共狂拨16电话施压 帕劳总统：再不接了</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/7/n12864297.md#1">遭强暴报案无人管 山东13岁女孩发视频求助</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/7/n12864809.md#1">北斗定位掉线罚款2千 冀货车司机愤而自杀</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/8/n12867529.md#1">全昭旻无惧中共小粉红狙击 35岁生日晒Nike鞋</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/7/n12862621.md#1">当爸后被吐槽身材发福 吴奇隆瘦身近照曝光</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/8/n12865432.md#1">赵又廷片场探班高圆圆 两人手拉手聊天超甜蜜</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/8/n12867670.md#1">自曝遭刘嘉玲删微信好友 杨颖解释缘由引热议</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/6/n12862148.md#1">华人导演第一人 李安获英国奥斯卡终身成就奖</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/6/n12861228.md#1">维生素B群白天提神 晚上助眠 营养师教你这样吃</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/2/n12853238.md#1">跳绳减肥比健走慢跑都好 还防骨松 教你正确做</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/4/n12858173.md#1">三高过敏等10种人 能打新冠疫苗吗？2类人不能打</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/4/5/n12859432.md#1">冬粉是减肥良伴！掌握2关键正确吃 不挨饿就能瘦</a></li>
-<li><a href="https://github.com/harlek3030/djy/blob/master/gb/21/3/31/n12849517.md#1">免疫系统藏巨大奥妙 你的身体怎样抗菌、抗病毒？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614595.md#1">【直播】俄乌大战 拜登首次国情咨文演说</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13615200.md#1">吴明德：中共暗撑俄侵乌 恐成国际大输家</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614701.md#1">【新闻看点】惨烈堪比铁链女 陕西有个铁笼女</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612151.md#1">TVB视后胡定欣确诊 陈豪吓得睡觉都戴口罩</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607888.md#1">调查：十对夫妻中三对存在“财务不忠”</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/harlek3030/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/harlek3030/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/4/2/n12855029.htm">精通西学的严复相信冥冥中有鬼神</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/4/2/n12855029.htm">精通西学的严复相信冥冥中有鬼神</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/harlek3030/djy/blob/master/gb/21/4/2/n12855029.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/harlek3030/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/harlek3030/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/harlek3030/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/harlek3030/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/harlek3030/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/4/2/n12855029.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
